# aether

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
aether-core/: Cargo.toml
aether-core/src/: dag.rs  envelope.rs  error.rs  execution_store.rs  health_poller.rs  instance_manager.rs  lib.rs  orchestrator.rs  registry.rs  registry_server.rs  registry_store.rs  resume.rs  supervisor.rs  types.rs  workflow.rs
aether-core/src/transport/: http.rs  mod.rs  stdio.rs  unix.rs
aether-core/tests/: integration.rs  orchestrator.rs
aether-core/tests/fixtures/: resume_request_approved.json  resume_request_modified.json  resume_request_rejected.json  suspend_payload.json
aether-dashboard/: Cargo.toml
aether-dashboard/src/: lib.rs  server.rs  state.rs
aether-dashboard/src/assets/: index.html
aether-dashboard/tests/: server_test.rs
aether-mcp/: Cargo.toml
aether-mcp/src/: engine.rs  http.rs  job.rs  jsonrpc.rs  lib.rs  stdio.rs
aether-mcp/tests/: engine.rs
docs/architecture/review/: 2026-05-17-aether-design-architecture.html
docs/specs/: 2026-05-17-aether-design.md
docs/superpowers/plans/: 2026-05-17-aether-core.md  2026-05-17-aether-dashboard.md  2026-05-21-http-registry.md  2026-06-23-aether-llm-planner.md
docs/superpowers/specs/: 2026-06-23-aether-llm-planner-design.md
examples/agentverse-pipeline/: Cargo.toml
examples/agentverse-pipeline/src/: main.rs
examples/llm-planner/: Cargo.toml  README.md  run.sh
examples/llm-planner/src/: agent.rs  main.rs  prompts.rs
examples/llm-planner/tests/: suspend_resume_e2e.rs
wiki/: README.md  check-wiki.sh  dashboard.md  durable-execution.md  examples.md  mcp-server.md  orchestration-core.md  wire-protocol-transport.md
