[workspace]
members = [
    "aether-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Jin Zuo <jinzuo@thestratos.org>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
