[workspace]
members = [
    "aether-core",
    "aether-dashboard",
    "examples/agentverse-pipeline",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Jin Zuo <jinzuo@thestratos.org>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
httpmock = "0.7"
chrono = "0.4"
tower = { version = "0.5", features = ["util"] }
