[package]
name = "aether-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
