[package]
name = "aether-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "aether-mcp"
path = "src/bin/aether-mcp.rs"

[dev-dependencies]
reqwest = { workspace = true }
