[package]
name = "example-agentverse-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentverse-pipeline"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../../aether-core" }
aether-dashboard = { path = "../../aether-dashboard" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
