[package]
name = "example-llm-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "llm-planner"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../../aether-core" }
agentverse = { path = "../../../agentverse/avs-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
