[package]
name = "example-llm-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "llm-planner"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../../aether-core" }
agentverse = { path = "../../../agentverse/avs-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agentverse-agent = { path = "../../../agentverse/avs-agent", features = ["http"] }
agentverse-hitl = { path = "../../../agentverse/avs-hitl" }
agentverse-session = { path = "../../../agentverse/avs-session" }
agentverse-tools = { path = "../../../agentverse/avs-tools" }
async-trait = { workspace = true }
reqwest = { workspace = true }
